# DM1

./: .env.example  .env.production.example  .gitignore  .mcp.json  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: context-curator.md  development-partner.md  ingest-information.md  karpathy-auto-research.md  project-importer.md  research-collector.md  session-reviewer.md
backend/: Dockerfile  pyproject.toml
backend/dm1/agents/: archivist.py  genesis.py  narrator.py  npc.py  orchestrator.py  rule_enforcer.py  storyteller.py  visual_director.py
backend/dm1/api/: auth.py  database.py  main.py
backend/dm1/api/middleware/: auth.py
backend/dm1/api/routes/: assets.py  auth.py  campaigns.py  character.py  gameplay.py  gamestate.py  llm.py  preferences.py  srd.py
backend/dm1/config/: settings.py
backend/dm1/graph/: client.py  mutations.py  queries.py  schema.py
backend/dm1/models/: campaign.py  cost.py  user.py
backend/dm1/providers/embedding/: gemini_embed.py  vector_db.py
backend/dm1/providers/image/: imagen.py
backend/dm1/providers/llm/: base.py  gemini.py  lm_studio.py  router.py
backend/dm1/rules/: combat.py  dice.py  inventory.py  leveling.py  skills.py  spells.py  srd_repository.py
backend/tests/api/: conftest.py  test_auth.py  test_campaigns.py  test_gamestate.py  test_srd.py
backend/tests/rules/: test_combat.py  test_dice.py  test_rule_enforcer.py  test_skills.py  test_spells.py  test_srd.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: backup.sh
(+38 files in other folders)
